@@ -1,0 +1,13 @@
+# $NetBSD: Makefile,v 1.1 2019/08/13 02:13:40 brook Exp $
+
+DISTNAME=	chemfig
+PKGNAME=	tex-${DISTNAME}-1.41
+TEXLIVE_REV=	51176
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/chemfig
+COMMENT=	Draw molecules with easy syntax
+LICENSE=	lppl-1.3c
+
+.include "../../print/texlive/package.mk"
+.include "../../mk/bsd.pkg.mk"
